compiler/tests/golden/errors/cascading.txt
error: Undefined ontology prefix `undefined` in type `undefined:drug` (used in Drug). Add `ontology undefined from "...";` declaration.
  --> /tmp/sounio_test_XXXX/cascade.dm:4:13
   |
  4 | type Drug = undefined:drug;  // First error
   |              ^

error: Type mismatch: expected `undefined:drug`, found `chebi:15365`
  --> /tmp/sounio_test_XXXX/cascade.dm:1:1
   |
  1 |
   |  ^

error: no alignment found between undefined:drug and chebi:15365 (different ontologies require explicit align declaration)
  --> /tmp/sounio_test_XXXX/cascade.dm:1:1
   |
  1 |
   |  ^

Error:   × Type errors:
  │ Undefined ontology prefix `undefined` in type `undefined:drug` (used in
  │ Drug). Add `ontology undefined from "...";` declaration.
  │ Type mismatch: expected `undefined:drug`, found `chebi:15365`
  │ no alignment found between undefined:drug and chebi:15365 (different
  │ ontologies require explicit align declaration)